--- a/exercice1.html
+++ b/exercice1.html
@@ -3,16 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ma première page Web</title>
+    <title>AAAAAAAAAAAA</title>
 </head>
 <body>
  
     <h1>Programmation Web et jeux vidéo (420-W11-SF)-git en perspective sur git hub</h1>
-        Le cours permettra à l'étudiant d'apprendre les bases de la conception et du codage de sites
-        Web, et ce, en respectant les standards les plus récents. À cette fin, l'étudiant étudiera le
-        langage de balisage <strong>html 5</strong> pour structurer une page Web ainsi que le langage <strong>css</strong>
-        facilitant sa mise en forme.<p>Dans la deuxième partie du cours, l'étudiant apprendra le langage de programmation Web 
-        JavaScript avec lequel il pourra ajouter de l'interactivité avec la page Web</p>
+    My name is Yoshikage Kira. I'm 33 years old. My house is in the northeast section of Morioh, where all the villas are, and I am not married. I work as an employee for the Kame Yu department stores, and I get home every day by 8 PM at the latest. I don't smoke, but I occasionally drink. I'm in bed by 11 PM, and make sure I get eight hours of sleep, no matter what. After having a glass of warm milk and doing about twenty minutes of stretches before going to bed, I usually have no problems sleeping until morning. Just like a baby, I wake up without any fatigue or stress in the morning. I was told there were no issues at my last check-up. I'm trying to explain that I'm a person who wishes to live a very quiet life. I take care not to trouble myself with any enemies, like winning and losing, that would cause me to lose sleep at night. That is how I deal with society, and I know that is what brings me happiness. Although, if I were to fight I wouldn't lose to anyone.</p>
     <h2>Contenu du programme en Web</h2>
     <h3>Introduction au Web</h3>
     JavaScript<br>
