--- a/exercice1.html
+++ b/exercice1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
  
-    <h1>Programmation Web et jeux v(420-W11-SF)-git en perspective sur git hub</h1>
+    <h1>bitch</h1>
         Le cours permettra à l'étudiant d'apprendre les bases de la conception et du codage de sites
         Web, et ce, en respectant les standards les plus récents. À cette fin, l'étudiant étudiera le
         langage de balisage <strong>html 5</strong> pour structurer une page Web ainsi que le langage <strong>css</strong>
